# weerenderer

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  img.cpp  img.hpp  main.cpp  model.hpp  obj.hpp  objimpl.cpp  objimpl.hpp  renderer.cpp  renderer.hpp  tgaimpl.cpp  tgaimpl.hpp
geometry/: vector.hpp
img/: tgaimage.cpp  tgaimage.h
tests/: CMakeLists.txt  tests.cpp
